Quick fix -- making font size smaller on popwindow (for h3) on mobile

--- a/public/src/app/app.component.scss
+++ b/public/src/app/app.component.scss
@@ -211,6 +211,10 @@ li {
     }
     .dayInfo {
         padding: 10px 10px;
+        h3 {
+            width: 100%;
+            font-size: 1rem;
+        }
     }
     .calendar-month {
         width: 94%;
